data/derived/fa15/progs/unify/prog3504.ml.out
Characters 58-69:
  else append digitsOfInt n/10 [n];;
              ^^^^^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type 'a list
